# fypTemp

./: .gitignore  TODO.md  test_esc.py
.claude/: settings.local.json
ros2_ws/: Dockerfile  README.md  docker-compose.yml  log_manual_control.py
ros2_ws/docker/: cyclonedds.xml  ros_entrypoint.sh
ros2_ws/src/collision_costmap/: package.xml  setup.cfg  setup.py
ros2_ws/src/collision_costmap/collision_costmap/: costmap_node.py
ros2_ws/src/coverage_planner/: package.xml  setup.cfg  setup.py
ros2_ws/src/coverage_planner/coverage_planner/: planner_node.py
ros2_ws/src/local_planner/: package.xml  setup.py
ros2_ws/src/local_planner/local_planner/: local_planner_node.py
ros2_ws/src/mission_executor/: package.xml  setup.cfg  setup.py
ros2_ws/src/mission_executor/mission_executor/: executor_node.py
ros2_ws/src/mock_sonar_sweep/: package.xml  setup.cfg  setup.py
ros2_ws/src/mock_sonar_sweep/mock_sonar_sweep/: sonar_node.py
ros2_ws/src/mock_state_estimator/: package.xml  setup.cfg  setup.py
ros2_ws/src/mock_state_estimator/mock_state_estimator/: state_estimator_node.py
ros2_ws/src/odom_integrator/: package.xml  setup.cfg  setup.py
ros2_ws/src/odom_integrator/odom_integrator/: odom_integrator_node.py
ros2_ws/src/polar_to_grid_mapper/: package.xml  setup.cfg  setup.py
ros2_ws/src/polar_to_grid_mapper/polar_to_grid_mapper/: mapper_node.py
ros2_ws/src/sim_bringup/: package.xml  setup.py
ros2_ws/src/sim_bringup/config/: slam_toolbox_online_async.yaml
ros2_ws/src/sim_bringup/launch/: hw_bringup.launch.py  sim_bringup.launch.py
ros2_ws/src/sim_bringup/rviz/: pool_sim.rviz
ros2_ws/src/sim_scan_publisher/: package.xml  setup.cfg  setup.py
ros2_ws/src/sim_scan_publisher/sim_scan_publisher/: scan_publisher_node.py
ros2_ws/src/teleop_node/: package.xml  setup.py
ros2_ws/src/teleop_node/teleop_node/: teleop_node.py
ros2_ws/src/yahboom_driver/: package.xml  setup.cfg  setup.py
ros2_ws/src/yahboom_driver/yahboom_driver/: yahboom_driver_node.py
user_interface/: README.md  copywriting.md  demo_storyboard.md  ux_flow.md
user_interface/prototype/: index.html  script.js  styles.css
