<?xml version="1.0"?>
<package format="3">
  <name>mock_sonar_sweep</name>
  <version>0.1.0</version>
  <description>Publishes synthetic polar sonar scans for pool boundaries and obstacles.</description>
  <maintainer email="todo@example.com">TODO Maintainer</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
