<?xml version="1.0"?>
<package format="3">
  <name>sim_scan_publisher</name>
  <version>0.1.0</version>
  <description>Publishes synthetic laser scans for pool simulation.</description>
  <maintainer email="todo@example.com">TODO Maintainer</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
